lib/src/compiler/tests/testdata/errors/74.out
error: syntax error
 --> line:1:8
  |
1 | global foo rule test { condition: true }
  |        ^ expected `private` or `rule`
  |